--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li class="phone-menu-item"><a href="#about" class="scrolllink">About</a></li>
             <li class="phone-menu-item"><a href="#services" class="scrolllink">Services</a></li>
             <li class="phone-menu-item"><a href="#clients" class="scrolllink">Clients</a></li>
-            <li class="phone-menu-item"><a href="#team" class="scrolllink">Team</a></li>
+            <li class="phone-menu-item"><a href="team.html">Team</a></li>
             <li class="phone-menu-item"><a href="#blog">Blog</a></li>
             <li class="phone-menu-item"><a href="#contact" class="scrolllink">Contact</a></li>
             <li class="phone-menu-item"><a href="#" target="_blank">Follow us on <i class="fa fa-twitter"></i></a></li>
@@ -46,7 +46,7 @@
             <li><a href="#about" class="scrolllink">About</a></li>
             <li><a href="#services" class="scrolllink">Services</a></li>
             <li><a href="#clients" class="scrolllink">Clients</a></li>
-            <li><a href="#team" class="scrolllink">Team</a></li>
+            <li><a href="team.html">Team</a></li>
             <li><a href="#blog">Blog</a></li>
             <li><a href="#contact" class="scrolllink">Contact</a></li>
             <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
@@ -140,114 +140,32 @@
             <div class="container"><span></span></div>
         </section>
 
-        <section class="content" id="team">    
+        <section class="content" id="contact">    
             <div class="container">
-
-            <h1 class="title-center">Our Team</h1>
-
-                <ul class="block-group tabs">
-                    <li class="col3 block tab-link current" data-tab="tab-1"><img src="img/img_profile_01.jpg" alt="Team" class="img-responsive"></li>
-                    <li class="col3 block tab-link" data-tab="tab-2"><img src="img/img_profile_01.jpg" alt="Team" class="img-responsive"></li>
-                    <li class="col3 block tab-link" data-tab="tab-3"><img src="img/img_profile_01.jpg" alt="Team" class="img-responsive"></li>
-                    <li class="col3 block tab-link" data-tab="tab-4"><img src="img/img_profile_01.jpg" alt="Team" class="img-responsive"></li>
-                </ul>
-
-                <div class="clearfix"></div>
-
-                <div id="tab-1" class="block-group tab-content current">
-                    <div class="col3 block">                        
-                        <h1>Riccardo Cambiassi</h1>
-                        <ul class="list-skills">
-                            <li>ruby rails</li>
-                            <li>javascript</li>
-                            <li>open source</li>
-                            <li>coffee making</li>
-                            <li>objective-c</li>
-                        </ul>
-                        <div class="social">
-                            <a href="#" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                            <a href="#" target="_blank" class="github"><i class="fa fa-github"></i></a>
-                            <a href="#" target="_blank" class="blog"><i class="fa fa-quote-right"></i></a>
-                        </div>
+                <h1 class="title-center">Contact Us</h1>
+                <form id="form-contact">
+                <div class="block-group">
+                    <div class="col6 block">
+                        <label for="fullname">Your Name</label>
+                        <input type="text" class="input" name="fullname" id="fullname" required> 
                     </div>
-                    <div class="col9 block">
-                        <p>Etiam eget finibus eros, vitae ullamcorper sapien. Sed non tincidunt nisl. Phasellus sodales ex a erat ultricies, ac tempor libero malesuada. Pellentesque cursus molestie libero, fringilla facilisis lorem vehicula ac. Aliquam dignissim vehicula nisl nec dignissim. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin mattis magna massa, ut volutpat ligula lacinia vel.<br /><br />Quisque aliquam pulvinar dolor nec sollicitudin. Mauris mattis mattis nisl, eu faucibus diam pretium quis. Pellentesque mauris enim, consectetur ut blandit in, consectetur ac arcu. Praesent egestas consectetur pharetra. Proin lacinia interdum arcu in vehicula. Vivamus mattis urna ac mollis ultricies. Integer ante enim, tincidunt ut ex hendrerit, varius ultricies velit. Curabitur lacus quam, ullamcorper sit amet tellus sed, auctor porttitor dui.</p>
+                    <div class="col6 block">
+                        <label for="emailaddress">Email Address</label>
+                        <input type="text" class="input" name="emailaddress" id="emailaddress" required> 
                     </div>                    
+                    <div class="col12 block">
+                        <label for="message">Message</label>
+                        <textarea wrap="off" class="textarea" cols="30" rows="5" id="message" required></textarea>
+                        <button name="login" type="submit" class="btn">Send the message</button>
+                    </div>                 
                 </div>
-
-                <div id="tab-2" class="block-group tab-content">
-                    <div class="col3 block">                        
-                        <h1>Vitae Ullamcorper</h1>
-                        <ul class="list-skills">
-                            <li>ruby rails</li>
-                            <li>coffee making</li>
-                            <li>objective-c</li>
-                        </ul>
-                        <div class="social">
-                            <a href="#" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                            <a href="#" target="_blank" class="github"><i class="fa fa-github"></i></a>
-                            <a href="#" target="_blank" class="blog"><i class="fa fa-quote-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="col9 block">
-                        <p>Quisque aliquam pulvinar dolor nec sollicitudin. Mauris mattis mattis nisl, eu faucibus diam pretium quis. Pellentesque mauris enim, consectetur ut blandit in, consectetur ac arcu. Praesent egestas consectetur pharetra. Proin lacinia interdum arcu in vehicula. Vivamus mattis urna ac mollis ultricies. Integer ante enim, tincidunt ut ex hendrerit, varius ultricies velit. Curabitur lacus quam, ullamcorper sit amet tellus sed, auctor porttitor dui.</p>
-                    </div>                    
-                </div>
-
-                <div id="tab-3" class="block-group tab-content">
-                    <div class="col3 block">                        
-                        <h1>Riccardo Cambiassi</h1>
-                        <ul class="list-skills">
-                            <li>ruby rails</li>
-                            <li>javascript</li>
-                            <li>open source</li>
-                            <li>coffee making</li>
-                            <li>objective-c</li>
-                        </ul>
-                        <div class="social">
-                            <a href="#" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                            <a href="#" target="_blank" class="github"><i class="fa fa-github"></i></a>
-                            <a href="#" target="_blank" class="blog"><i class="fa fa-quote-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="col9 block">
-                        <p>Etiam eget finibus eros, vitae ullamcorper sapien. Sed non tincidunt nisl. Phasellus sodales ex a erat ultricies, ac tempor libero malesuada. Pellentesque cursus molestie libero, fringilla facilisis lorem vehicula ac. Aliquam dignissim vehicula nisl nec dignissim. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin mattis magna massa, ut volutpat ligula lacinia vel.<br /><br />Quisque aliquam pulvinar dolor nec sollicitudin. Mauris mattis mattis nisl, eu faucibus diam pretium quis. Pellentesque mauris enim, consectetur ut blandit in, consectetur ac arcu. Praesent egestas consectetur pharetra. Proin lacinia interdum arcu in vehicula. Vivamus mattis urna ac mollis ultricies. Integer ante enim, tincidunt ut ex hendrerit, varius ultricies velit. Curabitur lacus quam, ullamcorper sit amet tellus sed, auctor porttitor dui.</p>
-                    </div>                    
-                </div>
-
-                <div id="tab-4" class="block-group tab-content">
-                    <div class="col3 block">                        
-                        <h1>Vitae Ullamcorper</h1>
-                        <ul class="list-skills">
-                            <li>ruby rails</li>
-                            <li>coffee making</li>
-                            <li>objective-c</li>
-                        </ul>
-                        <div class="social">
-                            <a href="#" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                            <a href="#" target="_blank" class="github"><i class="fa fa-github"></i></a>
-                            <a href="#" target="_blank" class="blog"><i class="fa fa-quote-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="col9 block">
-                        <p>Quisque aliquam pulvinar dolor nec sollicitudin. Mauris mattis mattis nisl, eu faucibus diam pretium quis. Pellentesque mauris enim, consectetur ut blandit in, consectetur ac arcu. Praesent egestas consectetur pharetra. Proin lacinia interdum arcu in vehicula. Vivamus mattis urna ac mollis ultricies. Integer ante enim, tincidunt ut ex hendrerit, varius ultricies velit. Curabitur lacus quam, ullamcorper sit amet tellus sed, auctor porttitor dui.</p>
-                    </div>                    
-                </div>
-
+                </form>                
             </div>
-        </section>
-
-        <section class="break break-left">   
-            <hr />
-            <div class="container"><span></span></div>
         </section>
 
     </div>
 
+<script type='text/javascript' src='js/vendor/jquery.validate.min.js'></script>
 <script type='text/javascript' src='js/vendor/mobile.min.js'></script>
 <script type='text/javascript' src='js/main.js'></script>
 
