Change welcome title and copy of How we work

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <section class="welcome">
   <div class="container">
-    <h1>Software And Web Development</h1>
+    <h1>Creating web and mobile apps</h1>
     <h2>{{ site.description }}</h2>
     <div class="welcome-icon"><a href="#about" class="icon-anim scrolllink"></a></div>
   </div>
@@ -26,7 +26,21 @@ layout: default
     <div class="block-group">
       <div class="col6 block">
         <h1 class="title-left">How we work</h1>
-        <p>Etiam eget finibus eros, vitae ullamcorper sapien. Sed non tincidunt nisl. Phasellus sodales ex a erat ultricies, ac tempor libero malesuada. Pellentesque cursus molestie libero, fringilla facilisis lorem vehicula ac. Aliquam dignissim vehicula nisl nec dignissim. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin mattis magna massa, ut volutpat ligula lacinia vel.<br><br>Quisque aliquam pulvinar dolor nec sollicitudin. Mauris mattis mattis nisl, eu faucibus diam pretium quis. Pellentesque mauris enim, consectetur ut blandit in, consectetur ac arcu. Praesent egestas consectetur pharetra. Proin lacinia interdum arcu in vehicula. Vivamus mattis urna ac mollis ultricies. Integer ante enim, tincidunt ut ex hendrerit, varius ultricies velit. Curabitur lacus quam, sit amet tellus sed, auctor porttitor dui.</p>
+        <p>
+          We like to deliver value with all things that we touch, so you'll most
+          likely see us using an agile/XP-based process to achieve that. We
+          will also work with you to figure out if there are specific needs to
+          cover and what processes best fit for the work at hand.
+        </p>
+        <p>
+          We do our best work on inspiring and challenging projects, but are
+          also happy to advise on what off-the-shelf components, approaches,
+          architecture, design patterns to use.
+        </p>
+        <p>
+          We will always encourage you to talk to us about your project – we
+          have a long experience of making clients happy.
+        </p>
       </div>
       <div class="col6 block">
         <img src="img/img_01.jpg" alt="How we work" class="img-responsive">
