Who We Are copy and graphic

--- a/index.html
+++ b/index.html
@@ -11,8 +11,25 @@ layout: default
 
 <section class="content" id="about">
   <div class="container">
-    <h1 class="title-center">Who & What we are</h1>
-    <p class="align-center">Etiam eget finibus eros, vitae ullamcorper sapien. Sed non tincidunt nisl. Phasellus sodales ex a erat ultricies, ac tempor libero malesuada. Pellentesque cursus molestie libero, fringilla facilisis lorem vehicula ac. Aliquam dignissim vehicula nisl nec dignissim. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin mattis magna massa, ut volutpat ligula vel.<br><br>Quisque aliquam pulvinar dolor nec. Mauris mattis mattis nisl, eu faucibus diam pretium quis.<br>Pellentesque mauris enim, consectetur ut blandit in, consectetur ac arcu.</p>
+    <div class="block-group">
+      <div class="col8 block">
+        <h1 class="title-left">Who & What we are</h1>
+        <p>
+          We are a group of talented individuals from different backgrounds. Through
+          experience working together we have found that creating a cooperative
+          delivers more value to our clients.
+        </p>
+        <p>
+          Our unique mix of skills allows us to have a wide offering including
+          consultancy, design, architecture, development, operations, training, and
+          support. We are not a digital agency, yet we deliver all the services that
+          one would—without the overheads.
+        </p>
+      </div>
+      <div class="col4 block">
+        <img src="img/business-and-web-development.png" alt="Who We Are" class="img-responsive">
+      </div>
+    </div>
   </div>
 </section>
 
@@ -24,26 +41,29 @@ layout: default
 <section class="content" id="services">
   <div class="container">
     <div class="block-group">
-      <div class="col6 block">
+      <div class="col4 block">
+        <img src="img/mobile-development.jpg" alt="How we work" class="img-responsive">
+      </div>
+      <div class="col8 block">
         <h1 class="title-left">How we work</h1>
         <p>
           We like to deliver value with all things that we touch, so you'll most
           likely see us using an agile/XP-based process to achieve that. We
           will also work with you to figure out if there are specific needs to
-          cover and what processes best fit for the work at hand.
+          cover and what processes best fit the work at hand.
         </p>
         <p>
-          We do our best work on inspiring and challenging projects, but are
+          We do our best work on inspiring and challenging projects, and are
           also happy to advise on what off-the-shelf components, approaches,
           architecture, design patterns to use.
         </p>
         <p>
-          We will always encourage you to talk to us about your project – we
-          have a long experience of making clients happy.
+          We can help you all the way from inception to and past delivery,
+          starting by defining your needs and problems, coming up with a plan to
+          solve them, executing that, and continuing to improve what was
+          realised. We believe that strong collaboration is key throughout the
+          partnership—we have a long experience of making clients happy.
         </p>
-      </div>
-      <div class="col6 block">
-        <img src="img/img_01.jpg" alt="How we work" class="img-responsive">
       </div>
     </div>
   </div>
