--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ layout: default
 <section class="content" id="clients">
   <div class="container">
     <h1 class="title-center">Clients</h1>
-    <p>Brands we have worked with in the past.</p>
+    <p>Clients we have worked with in the past.</p>
 
     <div class="block-group">
       <div class="col3 col6-mobile block">
