add a murmuration animation to home page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <section class="welcome">
-  <div class="container">
+  <div class="container" id="murmuration-controller">
     <h1>Creating web and mobile apps</h1>
     <h2>{{ site.description }}</h2>
     <div class="welcome-icon"><a href="#about" class="icon-anim scrolllink"></a></div>
