--- a/career/senior-ruby-developer.html
+++ b/career/senior-ruby-developer.html
@@ -6,7 +6,9 @@ permalink: /career/senior-ruby-developer/
 
 <h1>Senior Ruby Developer</h1>
 
-<p>100Starlings is a cooperative of professionals skilled at solving problems and creating excellent products that make
+<p>
+  <br>
+  100Starlings is a cooperative of professionals skilled at solving problems and creating excellent products that make
   our clients and their customers happy and more successful. Our unique mix of skills allows us to have a wide offering
   including consultancy, design, architecture, development, operations, training, and support.
   <br>
@@ -22,9 +24,12 @@ permalink: /career/senior-ruby-developer/
   a 9-to-5-job, a place where they have a voice, can guide and lead. We recognise and appreciate talent, and have also
   successfully supported people to grow through our team – our senior members each have 16+ years development
   backgrounds, have contributed to Rails, Elixir, spoken at conferences, etc.
+  <br>
 </p>
 
-<h3>✨In our projects you will…</h3>
+<h3>
+  <br>✨In our projects you will…
+</h3>
 
 <ul>
   <li>Develop full-stack Ruby on Rails code</li>
@@ -34,7 +39,9 @@ permalink: /career/senior-ruby-developer/
   <li>Occasionally pair-program with others in the team</li>
 </ul>
 
-<h3>🥇You’re the right candidate if…</h3>
+<h3>
+  <br>🥇You’re the right candidate if…
+</h3>
 
 <ul>
   <li>You have a strong understanding and experience with Ruby on Rails</li>
@@ -45,7 +52,9 @@ permalink: /career/senior-ruby-developer/
   <li>YYou don’t shy away from new technologies (e.g. Elixir, Clojure, React) or new challenges (e.g. Devops, etc.)</li>
 </ul>
 
-<h3>🎁 What we offer</h3>
+<h3>
+  <br>🎁 What we offer
+</h3>
 
 <ul>
   <li>Competitive rates based on experience</li>
@@ -55,7 +64,9 @@ permalink: /career/senior-ruby-developer/
   <li>Training and conference budget to make sure you can keep learning and growing</li>
 </ul>
 
-<h3>🤝Hiring process</h3>
+<h3>
+  <br>🤝Hiring process
+</h3>
 
 <ul>
   <li>Send application to join@100starlings.com</li>
