--- a/career/senior-ruby-developer.html
+++ b/career/senior-ruby-developer.html
@@ -4,31 +4,33 @@ title: Senior Ruby Developer
 permalink: /career/senior-ruby-developer/
 ---
 
-<h1>Senior Ruby Developer</h1>
+<h1 class="ad-title">Senior Ruby Developer</h1>
 
 <p>
-  <br>
   100Starlings is a cooperative of professionals skilled at solving problems and creating excellent products that make
   our clients and their customers happy and more successful. Our unique mix of skills allows us to have a wide offering
   including consultancy, design, architecture, development, operations, training, and support.
-  <br>
+</p>
+<p>
   We’ve been working remotely since before it became cool and value flexibility and trust. We hear each other out on the
   job, consider everyone’s input, and use it when making decisions. Outside projects we still support each other and
   appreciate and even help out with side projects (we have a variety of interests, from running projects for the benefit
   of the community, to 3d printing, electric car conversions, flying, etc).
-  <br>
+</p>
+  <p>
   Even though we work fully remotely, 100Starlings has an office in London and Budapest for occasional meetings and in
   person.
-  <br>
+</p>
+<p>
   We’re not your average employer: we believe that we are a great fit for someone who is looking for something more than
   a 9-to-5-job, a place where they have a voice, can guide and lead. We recognise and appreciate talent, and have also
   successfully supported people to grow through our team – our senior members each have 16+ years development
   backgrounds, have contributed to Rails, Elixir, spoken at conferences, etc.
-  <br>
+  
 </p>
 
 <h3>
-  <br>✨In our projects you will…
+  ✨In our projects you will…
 </h3>
 
 <ul>
@@ -40,7 +42,7 @@ permalink: /career/senior-ruby-developer/
 </ul>
 
 <h3>
-  <br>🥇You’re the right candidate if…
+  🥇You’re the right candidate if…
 </h3>
 
 <ul>
@@ -53,7 +55,7 @@ permalink: /career/senior-ruby-developer/
 </ul>
 
 <h3>
-  <br>🎁 What we offer
+  🎁 What we offer
 </h3>
 
 <ul>
@@ -65,7 +67,7 @@ permalink: /career/senior-ruby-developer/
 </ul>
 
 <h3>
-  <br>🤝Hiring process
+  🤝Hiring process
 </h3>
 
 <ul>
