removed </div> and corrected the text in description

--- a/career/senior-ruby-developer.html
+++ b/career/senior-ruby-developer.html
@@ -18,7 +18,7 @@ permalink: /career/senior-ruby-developer/
   of the community, to 3d printing, electric car conversions, flying, etc).
 </p>
   <p>
-  Even though we work fully remotely, 100Starlings has an office in London and Budapest for occasional meetings and in
+  Even though we work fully remotely, 100Starlings has an office in London and Budapest for occasional meetings in
   person.
 </p>
 <p>
@@ -51,7 +51,7 @@ permalink: /career/senior-ruby-developer/
   <li>You have excellent communication skills</li>
   <li>You are pragmatic and focused on finding solutions</li>
   <li>You have a well established knowledge of technology</li>
-  <li>YYou don’t shy away from new technologies (e.g. Elixir, Clojure, React) or new challenges (e.g. Devops, etc.)</li>
+  <li>You don’t shy away from new technologies (e.g. Elixir, Clojure, React) or new challenges (e.g. Devops, etc.)</li>
 </ul>
 
 <h3>
