--- a/career/senior-ruby-developer.html
+++ b/career/senior-ruby-developer.html
@@ -4,27 +4,34 @@ title: Senior Ruby Developer
 permalink: /career/senior-ruby-developer/
 ---
 
-<h1>Senior Ruby Developer</h1>
+<h1 class="ad-title">Senior Ruby Developer</h1>
 
-<p>100Starlings is a cooperative of professionals skilled at solving problems and creating excellent products that make
+<p>
+  100Starlings is a cooperative of professionals skilled at solving problems and creating excellent products that make
   our clients and their customers happy and more successful. Our unique mix of skills allows us to have a wide offering
   including consultancy, design, architecture, development, operations, training, and support.
-  <br>
+</p>
+<p>
   We’ve been working remotely since before it became cool and value flexibility and trust. We hear each other out on the
   job, consider everyone’s input, and use it when making decisions. Outside projects we still support each other and
   appreciate and even help out with side projects (we have a variety of interests, from running projects for the benefit
   of the community, to 3d printing, electric car conversions, flying, etc).
-  <br>
-  Even though we work fully remotely, 100Starlings has an office in London and Budapest for occasional meetings and in
+</p>
+  <p>
+  Even though we work fully remotely, 100Starlings has an office in London and Budapest for occasional meetings in
   person.
-  <br>
+</p>
+<p>
   We’re not your average employer: we believe that we are a great fit for someone who is looking for something more than
   a 9-to-5-job, a place where they have a voice, can guide and lead. We recognise and appreciate talent, and have also
   successfully supported people to grow through our team – our senior members each have 16+ years development
   backgrounds, have contributed to Rails, Elixir, spoken at conferences, etc.
+  
 </p>
 
-<h3>✨In our projects you will…</h3>
+<h3>
+  ✨In our projects you will…
+</h3>
 
 <ul>
   <li>Develop full-stack Ruby on Rails code</li>
@@ -34,7 +41,9 @@ permalink: /career/senior-ruby-developer/
   <li>Occasionally pair-program with others in the team</li>
 </ul>
 
-<h3>🥇You’re the right candidate if…</h3>
+<h3>
+  🥇You’re the right candidate if…
+</h3>
 
 <ul>
   <li>You have a strong understanding and experience with Ruby on Rails</li>
@@ -42,10 +51,12 @@ permalink: /career/senior-ruby-developer/
   <li>You have excellent communication skills</li>
   <li>You are pragmatic and focused on finding solutions</li>
   <li>You have a well established knowledge of technology</li>
-  <li>YYou don’t shy away from new technologies (e.g. Elixir, Clojure, React) or new challenges (e.g. Devops, etc.)</li>
+  <li>You don’t shy away from new technologies (e.g. Elixir, Clojure, React) or new challenges (e.g. Devops, etc.)</li>
 </ul>
 
-<h3>🎁 What we offer</h3>
+<h3>
+  🎁 What we offer
+</h3>
 
 <ul>
   <li>Competitive rates based on experience</li>
@@ -55,7 +66,9 @@ permalink: /career/senior-ruby-developer/
   <li>Training and conference budget to make sure you can keep learning and growing</li>
 </ul>
 
-<h3>🤝Hiring process</h3>
+<h3>
+  🤝Hiring process
+</h3>
 
 <ul>
   <li>Send application to join@100starlings.com</li>
